# mrover-workspace

./: .dockerignore  .gitignore  .ignore  .pcd  .travis.yml  1  CODEOWNERS  Dockerfile  README.md  TEMP.txt  Vagrantfile  ag_calibration.txt  changes  external_requirements.in  external_requirements.txt  fpsdata.txt  imgui.ini  jarvis  log.txt  main  nav.txt  nav_output.txt  nav_output2.txt  obstacle_lcm_output.txt  obstacle_lcm_plugged_in.txt  odrive.sh  output.txt  rtkbridge  rundocker.sh  sitting_still.txt  temp  terminal  test.py  valid_configurations.txt  valid_configurations_2.csv
jetson/circ-auton-arm/: alvar_dict.yml  artag_detector.cpp  artag_detector.hpp  camera.cpp  camera.hpp  config.h.in  main.cpp  meson.build  meson_options.txt  perception.hpp
jetson/cv/: README.md  alvar_dict.yml  artag_detector.cpp  artag_detector.hpp  camera.cpp  camera.hpp  config.h.in  main.cpp  meson.build  meson_options.txt  obstacle_detector.cpp
jetson/cv/calibrate/: meson.build
jetson/cv/cvtest/: automated_test.cpp
jetson/nav/: .gitignore  CMakeLists.txt  README.md  cache.hpp  courseProgress.cpp  courseProgress.hpp  courseState.cpp  courseState.hpp  course_state.cpp  course_state.hpp  environment.cpp  environment.hpp  filter.hpp  gimbal.cpp  gimbal.hpp  layer2_test.cpp  main.cpp  map.cpp  map.h  meson.build  obstacle_sm.cpp  obstacle_sm.hpp  pid.cpp  pid.hpp  project.ini  recovery.cpp  recovery.hpp  rover.cpp  rover.hpp  searchPointGeneration.py  stateMachine.cpp  stateMachine.hpp  test_layer1.cpp  thor.hpp  thor_volatile.hpp  utilities.cpp  utilities.hpp
jetson/nav/auton_arm/: auton_armStateMachine.cpp  auton_armStateMachine.hpp  main.cpp  meson.build  project.ini  rover.cpp  rover.hpp  stateMachine.cpp  stateMachine.hpp
jetson/nav/gate_search/: circleGateSearch.cpp  circleGateSearch.hpp  diamondGateSearch.cpp  diamondGateSearch.hpp  filter.hpp  gateStateMachine.cpp  gateStateMachine.hpp
jetson/nav/obstacle_avoidance/: obstacleAvoidanceStateMachine.cpp  obstacleAvoidanceStateMachine.hpp  simpleAvoidance.cpp  simpleAvoidance.hpp
jetson/nav/search/: gate_search_points.txt  gimbalSpiralOutSearch.cpp  gimbalSpiralOutSearch.hpp  lawnMowerSearch.cpp  lawnMowerSearch.hpp  searchFromPathFile.cpp  searchFromPathFile.hpp  searchStateMachine.cpp  searchStateMachine.hpp  spiralInSearch.cpp  spiralInSearch.hpp  spiralOutSearch.cpp  spiralOutSearch.hpp  spiral_search_points.txt  spiral_search_points_6m.txt  spiral_search_points_9m.txt
jetson/nav/tests/: gate_search_Stops_Driving_To_Angle.json
jetson/nucleo_bridge/: Commands.h  Controller.cpp  Controller.h  ControllerMap.cpp  ControllerMap.h  Frontend.h  Hardware.h  I2C.cpp  I2C.h  LCMHandler.cpp  LCMHandler.h  README.md  main.cpp  meson.build  meson_options.txt  test.cpp
jetson/percep/: CMakeLists.txt  README.md  artag_detector.cpp  artag_detector.hpp  camera.cpp  camera.hpp  config.h.in  display.hpp  main.cpp  meson.build  meson_options.txt  pcl.cpp  pcl.hpp  perception.hpp  project.ini  test.cpp  test_protocol.md
jetson/percep/artag_test/: Makefile  README.md  artag_test_errors.cpp  artag_test_errors.hpp  artag_test_framework.cpp  artag_test_framework.hpp  config.h.in  main.cpp  test_framework.cpp  test_framework.hpp
jetson/percep/deprecated/: obstacle_detector.cpp  tennisball_detector.cpp
jetson/percep/percep_test/: README.md  meson.build
jetson/percep_obs_detect/: .gitignore  CMakeLists.txt  README.md  config.json  launchme  meson.build  meson_options.txt  project.ini  sourceme
jetson/percep_obs_detect/data/: pcl0.pcd  pcl10.pcd  pcl100.pcd  pcl102.pcd  pcl104.pcd  pcl106.pcd  pcl108.pcd  pcl110.pcd  pcl112.pcd  pcl114.pcd  pcl116.pcd  pcl118.pcd  pcl12.pcd  pcl120.pcd  pcl122.pcd  pcl124.pcd  pcl126.pcd  pcl128.pcd  pcl130.pcd  pcl132.pcd  pcl134.pcd  pcl136.pcd  pcl138.pcd  pcl14.pcd  pcl140.pcd  pcl142.pcd  pcl144.pcd  pcl146.pcd  pcl148.pcd  pcl150.pcd  pcl152.pcd  pcl154.pcd  pcl156.pcd  pcl158.pcd  pcl16.pcd  pcl160.pcd  pcl162.pcd  pcl164.pcd  pcl166.pcd  pcl168.pcd  (+125 more)
jetson/percep_obs_detect/data2/: SimpleSceneGenerator.cpp  pcl0.pcd  pcl1.pcd  pcl10.pcd  pcl100.pcd  pcl101.pcd  pcl102.pcd  pcl103.pcd  pcl104.pcd  pcl105.pcd  pcl106.pcd  pcl107.pcd  pcl108.pcd  pcl109.pcd  pcl11.pcd  pcl110.pcd  pcl111.pcd  pcl112.pcd  pcl113.pcd  pcl114.pcd  pcl115.pcd  pcl116.pcd  pcl117.pcd  pcl118.pcd  pcl119.pcd  pcl12.pcd  pcl120.pcd  pcl121.pcd  pcl122.pcd  pcl123.pcd  pcl124.pcd  pcl125.pcd  pcl126.pcd  pcl127.pcd  pcl128.pcd  pcl129.pcd  pcl13.pcd  pcl130.pcd  pcl131.pcd  pcl132.pcd  (+177 more)
jetson/percep_obs_detect/include/: GLViewer.hpp  TestStats.h  Timer.hpp  common.cuh  common.hpp  euclidean-cluster.hpp  filter.hpp  find-clear-path.hpp  obs-detector.h  pass-through.hpp  pcl.hpp  (+9 more)
jetson/ra_kinematics/: Makefile  README.md  arm_state.cpp  arm_state.hpp  kinematics.cpp  kinematics.hpp  main.cpp  meson.build  motion_planner.cpp  motion_planner.hpp  mrover_arm.cpp  mrover_arm.hpp  project.ini  spline.cpp  spline.h  utils.cpp  utils.hpp
jetson/talon/: meson.build  rover.cpp  rover.hpp
onboard/cv/: README.md  alvar_dict.yml  artag_detector.cpp  artag_detector.hpp  ball.cpp  calibrate_tools.cpp  camera.cpp  camera.hpp  config.h.in  main.cpp  meson.build  meson_options.txt  new_obstacle_detector.cpp  obstacle_detector.cpp  pcl.cpp  perception.hpp  tennisball_detector.cpp  verify.cpp
onboard/nav/: Layer1_subclass.cpp  Layer1_subclass.h  Layer2.hpp  calculations.cpp  calculations.hpp  layer1.cpp  layer1.hpp  layer2.cpp  layer2.hpp  layer2_run_fsm.cpp  layer2_test.cpp  layers.cpp  layers.hpp  main.cpp  meson.build  pid.cpp  pid.hpp  rover.cpp  rover.hpp  searcher.cpp  searcher.hpp  searches.cpp  searches.hpp  stateMachine.cpp  stateMachine.hpp  test_layer1.cpp  thor_volatile.hpp  utilities.cpp  utilities.hpp
onboard/nucleo_bridge/: Controller.cpp  Controller.h  ControllerMap.cpp  ControllerMap.h  Hardware.h  I2C.cpp  I2C.h  LCMHandler.cpp  LCMHandler.h  README.md  backend.h  controller.h  frontend.h  hardware.h  main.cpp  meson.build  project.ini
onboard/talon/: main.cpp  meson.build  project.ini  rover.cpp  rover.hpp
(+1122 files in other folders)
