option('ar_detection', type: 'boolean', value : true)
option('ar_record', type: 'boolean', value : false)
option('obs_detection', type: 'boolean', value: true)
option('obs_record', type: 'boolean', value : false)
option('with_zed', type: 'boolean', value : true)
option('perception_debug', type: 'boolean', value: true)
option('write_frame', type: 'boolean', value: false)
option('data_folder', type: 'string', value: '/home/jessica/auton_data/')


